# common_test

./: .gitignore  README.md  output.txt
CPP/: CMakeLists.txt  README.md  arrayMat3d.cpp  astarNewTest.cpp  bgkgradtest.cpp  ellipDist.cpp  ellipDistCMU.cpp  isPtsInEllipsoid.cpp  linearNLP.cpp  main.cpp  multimap.cpp  pclPc2Extract.cpp  pclRsearch.cpp  temp.cpp  templateAstar.cpp  test.py  unordered_set.cpp  unorderedmap.cpp  wassersteinDistance.cpp
CPP_AI/cuda/BUGV1batchEigenSlover3x3/: CMakeLists.txt
CPP_AI/cuda/BUGV1batchEigenSlover3x3/include/: eig3x3.h
CPP_AI/cuda/BUGV1batchEigenSlover3x3/src/: eig3x3.cu  main.cpp
CPP_AI/cuda/V2batchEigenDecomposition3x3/: CMakeLists.txt  eigen_decomp.cu  eigen_decomp_modified.cu
CPP_AI/cuda/covSparseFunCuda/: CMakeLists.txt  covSparseFunCuda.cu
CPP_AI/libtorch/0HelloWorld/: tensorHelloWorld.cpp
CPP_AI/libtorch/NNsequentialOptFitFunc/: CMakeLists.txt  NNsequentialOptFitFunc.cpp  nnFittingFunc2.cpp  polyFittingFunc.cpp  sinFittingTest.cpp  sinFittingTest2.cpp
CPP_AI/libtorch/SGP/: CMakeLists.txt  SGP_libtorch.cpp
CPP_AI/libtorch/cmpCudaTorch/: CMakeLists.txt  main.cu
CPP_AI/libtorch/cmpkFloatxx/: CMakeLists.txt  cmpkFloatxx.cpp
CPP_AI/libtorch/constructSe2Travmap/: CMakeLists.txt  constructSe2Travmap.cpp
CPP_AI/libtorch/constructSe2Travmap/pyTest/: cmpBlockEigSlover.py  cmpEigSlover.py  extractEllipsoid.py
CPP_AI/libtorch/large3x3MatCudaKernel/: CMakeLists.txt  main.cpp  matrix3x3eigendecomp.cu  matrix3x3eigendecomp.h
CPP_AI/libtorch/localSe2tBGKIFuseMap/: CMakeLists.txt
CPP_AI/libtorch/localSe2tBGKIFuseMap/backup_fullcomment/: fullcomment_local_se2t_bgkimap.cpp  fullcomment_local_se2t_bgkimap.hpp
CPP_AI/libtorch/localSe2tBGKIFuseMap/backup_noPriorSigma2/: local_se2t_bgkimap.cpp  local_se2t_bgkimap.hpp
CPP_AI/libtorch/localSe2tBGKIFuseMap/include/: cuda_kernel.h  local_se2t_bgkimap.hpp
CPP_AI/libtorch/localSe2tBGKIFuseMap/src/: cuda_kernel.cu  local_se2t_bgkimap.cpp  local_se2t_bgkimap.hpp  local_se2t_bgkimap_backup.cpp  main.cpp  temp.cpp
CPP_COMLIB/FibonacciHeap/: CMakeLists.txt  FibonacciHeap.hpp  main.cpp
CPP_COMLIB/boostCpp/FibHeap/: CMakeLists.txt  compareBoostStdHeap.cpp  main.cpp
CPP_COMLIB/boostCpp/RTree/: CMakeLists.txt  RTree.h  rtree_customnode.cpp  rtree_single.cpp
CPP_COMLIB/fixedCapacityHeap/: CMakeLists.txt  main.cpp
CPP_COMLIB/gridUpdate/: CMakeLists.txt  gridUpdate.cpp
CPP_COMLIB/multisetAndPQ/: CMakeLists.txt  main.cpp
CPP_COMLIB/openMP/: CMakeLists.txt  main.cpp
CPP_COMLIB/openMP/cmpParallelAndSerial/: main.cpp
CPP_COMLIB/openMP/errorUnorderedMap/: CMakeLists.txt  errorUnorderedMap.cpp
CPP_COMLIB/openMP/helloworld/: CMakeLists.txt  doubleLoop.cpp  doubleLoopBoolVectorIssues.md  doubleLoopOther.cpp  singleLoop.cpp  unordered_map_test.cpp
CPP_COMLIB/openMP/testProblemSituation/: CMakeLists.txt  main.cpp
CPP_THIRD_PARTYs/autodiffTest/: CMakeLists.txt
CPP_THIRD_PARTYs/autodiffTest/src/: main.cpp
CPP_THIRD_PARTYs/eigen/: CMakeLists.txt  commonUsage.cpp
CPP_THIRD_PARTYs/ikdtreeTest/: CMakeLists.txt  ikdtree_kdtree.cpp  main.cpp
CPP_THIRD_PARTYs/ikdtreeTest/ikdtree/: ikd_tree.cpp  ikd_tree.hpp
CPP_THIRD_PARTYs/libtorch/0HelloWorld/: CMakeLists.txt  main.cpp  tensorHelloWorld.cpp
CPP_THIRD_PARTYs/libtorch/1operTensor/: CMakeLists.txt
CPP_THIRD_PARTYs/matplotlib-cpp/simpleTest/: CMakeLists.txt  main.cpp
CPP_THIRD_PARTYs/open3d/eigenRelatedGPUTest/: CMakeLists.txt  eigenRelatedGPUTest.cpp
CPP_THIRD_PARTYs/open3d/gpuTest/: CMakeLists.txt  gmm.cpp  open3dgpu.cpp
CPP_THIRD_PARTYs/open3d/matrixGPU/: CMakeLists.txt  main.cpp
CPP_THIRD_PARTYs/pcl/kdtree/: CMakeLists.txt  kdtreeTest.cpp
CPP_THIRD_PARTYs/pcl/removeAndDwz/: CMakeLists.txt  removeAndDwz.cpp
Develop/BGKO3DTensorCuda/: CMakeLists.txt  main.cpp
PY_/: DBscan2D.py  Ellip2Guass.py  calc.py  diffExtNode.py  elevGaussian.py  findEllipFromGrid.py  imageContour.py  kinAstar.py  meanshift2D.py  mergeGauss.py  plot.py  plotEllip2D.py  plotEllip3D.py  plotlnx.py  sampleInCircle.py  sampleInEllipsoid.py  test.py  visCovByEllip.py  visExtNode.py  visExtNodes.py  visKinPath copy.py  visKinPath.py  visPath.py
PY_/basic/: README.md  dwz2DPoints.py  dynamicGridNDTMap.py
PY_/bgk/: BayesianRegressionTest.py  NWR_GradTest.py  NWR_MSE_Optim.py  NWR_SparseKernel_MSE_Optim.py  NWR_multiKernelLen.py  bgkInference.py  deepseekMLETest2D.py  deepseelMLETest3DMLlibrary.py  deepseelMLETest3DPytorch.py  deepseelMLETest3DPytorchAKernel.py  deepseelMLETest3DPytorchRBFKernel.py  deepseelMLETest3DPytorchSparseKernel.py  negMLLFunc.md  plotCovSparse.py  plotRBFFunc.py  plotRBFandCovSparse.py  testMLE2D.py  testMLE3D.py
PY_/bgk/gradientTest/: LerpGradTest.py  NWR_GradTest.py
PY_/bgk/independentKlenBGKIRegression/: README.md  backup.py  independTest.py  independentKlenBGKI.py  independentKlenBGKI3DRegression.py  onlyPredTest.py  test.py
PY_/bgk/independentKlenBGKIRegression/SubTest/: covsparse_kernel.py  extractIndexBackward.py  (+2 more)
PY_/plot/: plotAcos.py  plotExpnegx.py  plotSoftplus.py
PY_/robot_sim/diffTwoWheel/: README.md  revolution_and_rotation.py
PY_/sgp/: sgpElevpred.py
PY_AI/RL/gymnasium/: pd_policy.py  ppo_policy.py  random_policy.py
PY_AI/torch/: dynamic_parameter_manage.py  eig.py
PY_COMLIB/HybridplannerTest/: plotEllipOfPathAndCheckIsInEllipsoid.py  plotRectangleOfPathAndCheckIsInRectangle.py
PY_COMLIB/pygame/joystickDriver/: joystickDriver.py
PY_THIRD_PARTYs/pathPlanner/DMP/: dynamic_movement_primitives.py
PY_THIRD_PARTYs/pathPlanner/ModelPredictiveTrajectoryGenerator/: lookup_table_generator.py  motion_model.py  trajectory_generator.py
PY_THIRD_PARTYs/pathPlanner/hybridAstar/: car.py  dynamic_programming_heuristic.py  hybrid_a_star.py
PY_THIRD_PARTYs/pathPlanner/hybridAstarKimi/: hybridAstar.py
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
comparison/POAMv.s.IBGKI/arrays/: n17e073.npz  n35w107.npz  n44w111.npz  n47w124.npz
comparison/POAMv.s.IBGKI/data/: download.py  printArrayNPZFile.py  visualize.py
temp/: plotAngle.py  quat2yaw.py  temp.txt
(+29 files in other folders)
